@@ -15,12 +15,15 @@ FILES+=$(shell find . -name *.cpp)
 FILES+=$(shell find . -name *.quiz)
 
 all:
-	(cd  $(TUTOR) && ./create-tables.sh )
-	make voidsets
+#	make sqltutor
+#	make voidsets
 	make datasets
 	make quiz_tables
 	make privileges
 	make questions_and_answers
+
+sqltutor:
+	(cd  $(TUTOR) && ./create-tables.sh )
 
 voidsets:
 	(cd void && make)
@@ -39,37 +42,37 @@ questions_and_answers:
 "SELECT dataset AS \" \", questions, answers" \
 "  FROM (SELECT 1 AS zzz, dataset,"  \
 "                 count(distinct id) AS questions, count(question_id) AS answers" \
-"          FROM questions" \
+"          FROM sqltutor.questions" \
 "               RIGHT JOIN" \
-"               answers" \
+"               sqltutor.answers" \
 "               ON id=question_id" \
 "         GROUP BY dataset" \
 "         UNION ALL" \
 "        SELECT '2' AS zzz, 'celkem' AS dataset," \
 "               count(distinct id) AS questions, count(question_id) AS answers" \
-"          FROM questions" \
+"          FROM sqltutor.questions" \
 "               RIGHT JOIN" \
-"               answers" \
+"               sqltutor.answers" \
 "               ON id=question_id) prehled" \
 " ORDER BY zzz, dataset;" | psql $(DBNAME)
 
 privileges:
-	@for t in `echo "select ds_table from datasets;" | psql $(DBNAME) -t`; \
+	@for t in `echo "select ds_table from sqltutor.datasets;" | psql $(DBNAME) -t`; \
 	do \
-	   echo REVOKE ALL ON TABLE $$t FROM PUBLIC ";" \
-		GRANT SELECT ON TABLE $$t TO PUBLIC ";" \
-	        GRANT SELECT ON TABLE $$t TO $(DBUSER) ";" | psql $(DBNAME); \
+	   echo REVOKE ALL   ON TABLE sqltutor.$$t FROM PUBLIC ";" \
+		GRANT SELECT ON TABLE sqltutor.$$t TO PUBLIC ";" \
+	        GRANT SELECT ON TABLE sqltutor.$$t TO $(DBUSER) ";" | psql $(DBNAME); \
 	done
-	@for t in datasets dataset_sources; \
+	@for t in sqltutor.datasets sqltutor.dataset_sources; \
 	do \
-	   echo REVOKE ALL ON TABLE $$t FROM PUBLIC ";" \
+	   echo REVOKE ALL   ON TABLE $$t FROM PUBLIC ";" \
 		GRANT SELECT ON TABLE $$t TO PUBLIC ";" \
 	        GRANT SELECT ON TABLE $$t TO $(DBUSER) ";" | psql $(DBNAME); \
 	done
 
 dump-sessions:
-	pg_dump $(DBNAME) --data-only --table=sessions > sessions-$(DATE)
-	pg_dump $(DBNAME) --data-only --table=sessions_answers > sessions_answers-$(DATE)
+	pg_dump $(DBNAME) --data-only --table=sqltutor.sessions > sessions-$(DATE)
+	pg_dump $(DBNAME) --data-only --table=sqltutor.sessions_answers > sessions_answers-$(DATE)
 
 archive:
 	tar czvf $(ARCH) $(FILES)
