@@ -1,4 +1,6 @@
-DELETE FROM datasets;
+-- DELETE FROM datasets;
+
+SET search_path TO sqltutor;
 
 INSERT INTO datasets VALUES ('odsl', 1, 'pracoviste',  'kod, popis');
 INSERT INTO datasets VALUES ('odsl', 2, 'zamestnanci', 'id, jmeno, prijmeni, pracoviste_kod, vek');
