@@ -1,6 +1,4 @@
-DROP TABLE dataset_sources CASCADE;
-
-CREATE TABLE dataset_sources (
+CREATE TABLE sqltutor.dataset_sources (
   dataset   VARCHAR(12),
   year      INT,
   sources   VARCHAR(120)
