@@ -3,9 +3,11 @@
  */
 
 
-DROP   FUNCTION next_question(IN session_id_ integer, IN hash_ char(32));
-
-CREATE FUNCTION next_question(IN session_id_ integer, IN hash_ char(32))
+CREATE OR REPLACE FUNCTION sqltutor.next_question
+(
+   IN session_id_ integer, 
+   IN hash_       char(32)
+)
 RETURNS integer
 AS $$
 DECLARE
@@ -20,7 +22,7 @@ DECLARE
 BEGIN
    SELECT points_min, points_max, dataset, status 
      INTO s_points_min_, s_points_max_, s_dataset_, s_status_
-     FROM sessions
+     FROM sqltutor.sessions
     WHERE session_id=session_id_ 
       AND hash_ = md5(time);
 
@@ -32,18 +34,18 @@ BEGIN
       /* algorithm 2 */
 
       SELECT coalesce(max(points),1) INTO max_points_
-        FROM questions
+        FROM sqltutor.questions
              JOIN
-             sessions_answers
+             sqltutor.sessions_answers
              ON (id = question_id)
        WHERE session_id = session_id_;
 
       IF max_points_ < 5 THEN
 
          SELECT count(*) INTO a_count_
-           FROM questions
+           FROM sqltutor.questions
                 JOIN
-                sessions_answers
+                sqltutor.sessions_answers
                 ON (id = question_id)
           WHERE session_id = session_id_
             AND correct
@@ -58,11 +60,11 @@ BEGIN
             
             SELECT id INTO next_question_
               FROM (SELECT id, points, random() AS rand
-                      FROM questions
+                      FROM sqltutor.questions
                      WHERE (s_points_min_ <= points) AND
                            (s_status_ = 'open') AND
                            (id NOT IN (SELECT question_id 
-                                           FROM sessions_answers
+                                           FROM sqltutor.sessions_answers
                                           WHERE session_id=session_id_))
                      ORDER BY points ASC, rand
                      LIMIT 1) next;
@@ -81,13 +83,13 @@ BEGIN
 
    SELECT id INTO next_question_
      FROM (SELECT q.id, random() AS rand
-             FROM questions AS q
+             FROM sqltutor.questions AS q
             WHERE (s_dataset_ IS NULL OR s_dataset_ = q.dataset) AND
                   (s_points_min_ IS NULL OR s_points_min_ <= q.points) AND
                   (s_points_max_ IS NULL OR s_points_max_ >= q.points) AND
                   (s_status_ = 'open') AND
                   (id NOT IN (SELECT question_id 
-                                  FROM sessions_answers
+                                  FROM sqltutor.sessions_answers
                                  WHERE session_id=session_id_))
             ORDER BY rand
             LIMIT 1) next;
@@ -107,7 +109,7 @@ RETURNS integer
 AS $$
 SELECT id
   FROM (SELECT q.id, random() AS rand
-          FROM questions as q
+          FROM sqltutor.questions as q
                JOIN
                (SELECT * 
                   FROM sessions 
