@@ -1,3 +1,7 @@
+2008-09-14  Ales Cepek  <cepek@localhost>
+
+	* added sqltutor schema in version 0.04
+
 2007-08-21  Ales Cepek  <cepek@gnu.org>
 
 	* start of the project 
